# linuxtips-python-webapi

./: .gitignore  README.md  pyproject.toml
day1/: contato.html  email.template.txt  http_client.py  index.html  pagina.html  render_message.py  script.js  server.py  ssr.py  wsgi.py
day1/blog/: blog.db  database.py  form.template.html  list.template.html  post.template.html  render.py  wsgi.py
day1/blog/site/: como-criar-um-blog-utilizando-python.html  index.html  python-é-eleita-a-linguagem-mais-popular.html
day1/blog_jinja/: blog.db  database.py  joe.py  wsgi.py
day1/blog_jinja/templates/: base.template.html  form.template.html  list.template.html  post.template.html
day1/cgi-bin/: envia.py
day2/: app.py
day2/django/: .dockerignore  Dockerfile  manage.py  setup.py
day2/django/blog/: admin.py  models.py  views.py
day2/django/blog/migrations/: 0001_initial.py
day2/django/djblog/: asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
day2/django/docker/: docker-compose.yaml  entrypoint.sh  nginx.conf
day2/django/templates/: base.html  detail.html  index.html  new_post.html
day2/django/templates/registration/: login.html
day2/flask/: setup.py
day2/flask/blog/: admin.py  app.py  auth.py  commands.py  config.py  database.py  plugins.py  posts.py  settings.toml  views.py
day2/flask/blog/templates/: base.html.j2  form.html.j2  index.html.j2  post.html.j2
day3/ansible/: django-deploy.yaml  inventory
day3/ansible/templates/: blog_settings.toml.j2
day4/: async.py  hello_fastapi.py  process.py  sync.py  threads.py
(+1 files in other folders)
