[project]
name = "linuxtips-python-webapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-pymongo>=3.0.1",
    "flask-shell-ipython>=0.5.3",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "legacy-cgi>=2.6.3",
]
